--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 djangorestframework = "*"
 coverage = "*"
 django-extensions = "*"
+model-bakery = "*"
 
 [requires]
 python_version = "3.7"
